kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: freelance
  labels:
    app: freelance
    environment: dev
