kubernetes/frontend-deployment-current.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "6"
  creationTimestamp: "2025-06-22T09:54:33Z"
  generation: 6
  labels:
    app: frontend
  name: frontend
  namespace: freelance
  resourceVersion: "13209"
  uid: ca632428-c710-4830-a81e-c50c0176fcc8
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-06-22T15:21:55+03:00"
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: papadooo/freelance-frontend:v2
        imagePullPolicy: Always
        name: frontend
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 2
  conditions:
  - lastTransitionTime: "2025-06-22T09:59:47Z"
    lastUpdateTime: "2025-06-22T09:59:47Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-06-22T09:54:33Z"
    lastUpdateTime: "2025-06-22T12:21:56Z"
    message: ReplicaSet "frontend-6c58dfd8df" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 6
  readyReplicas: 2
  replicas: 3
  unavailableReplicas: 1
  updatedReplicas: 1
